<resources>
    <string name="app_name">BOX</string>
    <string name="hint_user">Email</string>
    <string name="hint_pass">Mật Khẩu</string>
    <string name="forget_pass">Quên Mật Khẩu?</string>
    <string name="btn_login">Đăng Nhập</string>
    <string name="or">Hoặc</string>
    <string name="face_login">Đăng Nhập Bằng Facebook</string>
    <string name="gmail_login">Đăng Nhập Bằng Gmail</string>
    <string name="noAccount">Bạn Chưa Có Tài Khoản?</string>
    <string name="register">  Đăng Ký Ngay</string>

    <string name="retype_pass">Nhập lại mật khẩu</string>
    <string name="btn_sign_up">Đăng ký</string>
    <string name="btn_confirm">Xác nhận</string>

    <string name="hint_name">Tên của bạn là?</string>
    <string name="hint_address">Địa chỉ nè</string>
    <string name="avatar">Hình đại diện</string>
    <string name="btn_select_img">Chọn ảnh</string>
    <string name="btn_update">Cập nhật</string>
    <string name="address">Nhập địa chỉ</string>

    <string name="congratulation">Chúc mừng bạn đã đăng ký tài khoản thành công. Bây giờ chúng ta cùng trải nghiệm BOX nào</string>
    <string name="btn_start">Bắt đầu thôi</string>

    <string name="slogan">Tình yêu chỉ là hạt cát, vì đồ ăn đã lấn át tình yêu.</string>
    <string name="location">Có phải bạn đang ở:</string>

    <string name="facebook_app_id">1418588802292677</string>
    <string name="facebook_client_token">ea744160e94a86857cead716506d0c86</string>
    <string name="map_api_key">AIzaSyBknGDde114KjDnfMDtw3u4TGx2NOmMCAI</string>

    <string name="category_fast_food">Fast Food</string>
    <string name="category_drink">Nước Uống</string>
    <string name="category_vietnamese_food">Món Việt</string>
    <string name="category_korean_food">Món Hàn</string>
    <string name="category_japanese_food">Món Nhật</string>
    <string name="category_all">Tất cả</string>

    <string name="product_description_example">Phô Mai và Việt Quất kết hợp tạo nên một món đá xay thơm ngon vào những ngày oi bức.</string>

    <string name="home">Home</string>
    <string name="favorite">Yêu thích</string>
    <string name="order">Đơn hàng</string>
    <string name="notification">Thông báo</string>
    <string name="account">Tài khoản</string>

    <string name="account_info">Thông tin cá nhân</string>
    <string name="buy">Mua lại</string>
    <string name="sale">Ưu đãi</string>
    <string name="payment">Thanh toán</string>
    <string name="logout">Thoát</string>

    <string name="name">Họ tên:</string>
    <string name="password">Mật khẩu:</string>
    <string name="phone">Số điện thoại:</string>
    <string name="address_edit">Địa chỉ:</string>
    <string name="save">Lưu</string>

    <string name="check_out">T.Toán</string>

    <string name="note">Ghi chú</string>
    <string name="note_message">Bạn có dặn dò gì không?</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>

    <string name="empty_text">Hông có gì trong hộp cả :((</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
