<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/logo"
        android:layout_marginTop="@dimen/_50sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/sdt"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:inputType="text"
        android:hint="@string/hint_user"
        android:textColorHint="@color/gray"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/poppins_Regular"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textPassword"
        android:hint="@string/hint_pass"
        android:textColorHint="@color/gray"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/poppins_Regular"/>

    <TextView
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass"
        android:fontFamily="@font/poppins_Regular"
        android:textColor="@color/orange"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_2sdp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/btn_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_Regular"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp">

        <View
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/orange"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:fontFamily="@font/poppins_Regular"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/orange"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <View
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/orange"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_33sdp"
        android:background="@drawable/btn_gray_background"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/facebook"
            android:layout_marginStart="@dimen/_10sdp"/>

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:text="@string/face_login"
            android:textColor="@color/orange"
            android:fontFamily="@font/poppins_Regular"
            android:textSize="@dimen/_13ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_33sdp"
        android:background="@drawable/btn_gray_background"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/_10sdp"
        >
        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:background="@drawable/gmail"
            android:layout_marginStart="@dimen/_10sdp"

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:text="@string/gmail_login"
            android:textColor="@color/orange"
            android:fontFamily="@font/poppins_Regular"
            android:textSize="@dimen/_13ssp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_2sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_30sdp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAccount"
            android:fontFamily="@font/poppins_Regular"
            android:textColor="@color/orange"
            android:layout_marginStart="@dimen/_13sdp"
            android:textSize="@dimen/_13sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:fontFamily="@font/poppins_Regular"
            android:textColor="@color/blue"
            android:textSize="@dimen/_13sdp"/>
        />

    </LinearLayout>


</LinearLayout>