<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FragmentAndActivity.SignUpInfoFragment">
    <ImageView
        android:id="@+id/back_button"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/btn_back"
        android:backgroundTint="@color/orange"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <ImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_70sdp"
        android:background="@drawable/logo"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_edit_text"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:inputType="text"
        android:hint="@string/hint_user"
        android:textColorHint="@color/gray"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edit_text"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textPassword"
        android:hint="@string/hint_pass"
        android:textColorHint="@color/gray"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/re_enter_password_edit_text"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="textPassword"
        android:hint="@string/retype_pass"
        android:textColorHint="@color/gray"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>

    <RelativeLayout
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/btn_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/comfortaa_variablefont_wght"
            android:text="@string/btn_sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"/>
    </RelativeLayout>
</LinearLayout>