<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".UpdateFragment">
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/btn_back"
        android:backgroundTint="@color/orange"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:inputType="text"
        android:hint="@string/hint_name"
        android:textColorHint="@color/gray"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="text"
        android:hint="@string/hint_name"
        android:textColorHint="@color/gray"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>

    <TextView
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:text="@string/avatar"
        android:fontFamily="@font/comfortaa_variablefont_wght"
        android:textSize="@dimen/_17ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:src="@drawable/default_avatar"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        app:shapeAppearanceOverlay="@style/roundedImageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_select_img"
        android:textColor="@color/blue"
        android:fontFamily="@font/comfortaa_variablefont_wght"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_20sdp"/>

    <RelativeLayout
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">
        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/btn_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/comfortaa_variablefont_wght"
            android:text="@string/btn_update"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />
    </RelativeLayout>
</LinearLayout>