<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".FragmentAndActivity.EditFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/btn_back"
            android:backgroundTint="@color/orange"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:fontFamily="@font/comfortaa_variablefont_wght"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center_horizontal">
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:src="@drawable/default_avatar"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            app:shapeAppearanceOverlay="@style/roundedImageView"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:background="@color/white"
                app:shapeAppearanceOverlay="@style/roundedImageView"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:background="@color/gray"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                app:shapeAppearanceOverlay="@style/roundedImageView"/>

            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_23sdp"
                android:background="@drawable/image_icon"
                android:backgroundTint="@color/white"
                android:layout_gravity="center_vertical"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="@font/comfortaa_variablefont_wght"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_edit_text"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="text"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>

    <TextView
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:fontFamily="@font/comfortaa_variablefont_wght"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_edit_text"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="textPassword"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>

    <TextView
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:fontFamily="@font/comfortaa_variablefont_wght"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phone_edit_text"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="phone"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>
    <TextView
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:text="@string/address_edit"
        android:fontFamily="@font/comfortaa_variablefont_wght"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/address_edit_text"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="text"
        app:backgroundTint="@color/orange"
        android:fontFamily="@font/comfortaa_variablefont_wght"/>
</LinearLayout>